[package]
name = "ms_toolkit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ms_toolkit"
path = "src/main.rs"

[dependencies]
eframe  = "0.29"
egui    = "0.29"
walkers = "0.29"
tokio   = { version = "1", features = ["rt-multi-thread"] }
regex   = "1"
rfd     = "0.14"
rayon       = "1"
egui_extras = "0.29"
printpdf    = { version = "0.6", features = ["embedded_images"] }
zip         = "0.6"
image       = { version = "0.24.9", default-features = true }
reqwest     = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
